fix(styles): remove horizontal scrollbar

--- a/addon/styles/components/_page.scss
+++ b/addon/styles/components/_page.scss
@@ -7,7 +7,6 @@
 
     // avoid using width directly
     max-width: 100vw;
-    min-width: 100vw;
     min-height: 100vh;
   }
 }
